--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -41,6 +41,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ex 2: Write a program that interprets the Body Mass Index (BMI) based on a user's weight and height.\n",
+    "\n",
+    "It should tell them the interpretation of their BMI based on the BMI value.\n",
+    "\n",
+    "Under 18.5 they are underweight\n",
+    "Over 18.5 but below 25 they have a normal weight\n",
+    "Over 25 but below 30 they are slightly overweight\n",
+    "Over 30 but below 35 they are obese\n",
+    "Above 35 they are clinically obese."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter your height in m: 1.8\n",
+      "enter your weight in kg: 89\n",
+      "Your BMI is 27, you are slightly overweight.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "height = float(input(\"enter your height in m: \"))\n",
+    "weight = float(input(\"enter your weight in kg: \"))\n",
+    "\n",
+    "def BMI_calc(height, weight):\n",
+    "    h = height\n",
+    "    w = weight\n",
+    "\n",
+    "    bmi = round(w / h**2)\n",
+    "    \n",
+    "    if bmi < 18.5:\n",
+    "        print(f'Your BMI is {bmi}, you are underweight.')\n",
+    "    elif bmi > 18.5 and bmi < 25:\n",
+    "        print(f'Your BMI is {bmi}, you have a normal weight.')\n",
+    "    elif bmi > 25 and bmi < 30:\n",
+    "        print(f'Your BMI is {bmi}, you are slightly overweight.')\n",
+    "    elif bmi > 30 and bmi < 35:\n",
+    "        print(f'Your BMI is {bmi}, you are obese.')\n",
+    "    elif bmi > 35:\n",
+    "        print(f'Your BMI is {bmi}, you are clinically obese.')\n",
+    "\n",
+    "BMI_calc(height, weight)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
