--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -99,7 +99,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ex 3: Write a program that works out whether if a given year is a leap year. A normal year has 365 days, leap years have 366, with an extra day in February. The reason why we have leap years is really fascinating, this video does it more justice:"
+    "Ex 3: Write a program that works out whether if a given year is a leap year. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Which year do you want to check? 2020\n",
+      "Leap Year.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "year = int(input(\"Which year do you want to check? \"))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def leap_year(year_num):\n",
+    "    if ((year_num % 400 == 0) or ((year_num % 4 == 0 )and (year_num %100 != 0))): \n",
+    "        print(\"Leap Year.\")\n",
+    "    else:\n",
+    "        print('Not leap year.')\n",
+    "\n",
+    "\n",
+    "leap_year(year)"
    ]
   },
   {
