--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -122,8 +122,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "def leap_year(year_num):\n",
     "    if ((year_num % 400 == 0) or ((year_num % 4 == 0 )and (year_num %100 != 0))): \n",
     "        print(\"Leap Year.\")\n",
@@ -135,11 +133,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Ex: 4 Build an automatic pizza order program."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Python Pizza Deliveries!\n",
+      "What size pizza do you want? S, M, or L S\n",
+      "Do you want pepperoni? Y or N Y\n",
+      "Do you want extra cheese? Y or N Y\n",
+      "Your final bill is: $18\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Welcome to Python Pizza Deliveries!\")\n",
+    "size = input(\"What size pizza do you want? S, M, or L \")\n",
+    "add_pepperoni = input(\"Do you want pepperoni? Y or N \")\n",
+    "extra_cheese = input(\"Do you want extra cheese? Y or N \")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def pizza_total(talla, pep, queso):\n",
+    "    total = 0\n",
+    "\n",
+    "    if talla == 'S':\n",
+    "        total += 15\n",
+    "    elif talla == 'M':\n",
+    "        total += 20\n",
+    "    elif talla == 'L':\n",
+    "        total += 25\n",
+    "    \n",
+    "    if pep == 'Y' and talla == 'S':\n",
+    "        total += 2\n",
+    "    elif (pep == 'Y') and (talla == 'M' or talla == 'L'):\n",
+    "        total += 3\n",
+    "\n",
+    "    if queso == 'Y':\n",
+    "        total += 1\n",
+    "\n",
+    "    print(f\"Your final bill is: ${total}\")\n",
+    "\n",
+    "pizza_total(size, add_pepperoni, extra_cheese)\n"
+   ]
   }
  ],
  "metadata": {
