--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -186,6 +186,70 @@
     "\n",
     "pizza_total(size, add_pepperoni, extra_cheese)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ex 5: Compatibility Calculator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Love Calculator!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(\"Welcome to the Love Calculator!\")\n",
+    "name1 = input(\"What is your name? \\n\")\n",
+    "name2 = input(\"What is their name? \\n\")\n",
+    "\n",
+    "\n",
+    "def love_calc(a,b):\n",
+    "    aname = a.upper()\n",
+    "    bname = b.upper()\n",
+    "    cname = aname + bname\n",
+    "    T = 0\n",
+    "    R = 0\n",
+    "    U = 0\n",
+    "    E = 0\n",
+    "    L = 0\n",
+    "    O = 0\n",
+    "    V = 0\n",
+    "\n",
+    "    for i in cname:\n",
+    "        if i == 'T':\n",
+    "            T += 1\n",
+    "        if i == 'R':\n",
+    "            R += 1\n",
+    "        if i == 'U':\n",
+    "            U += 1\n",
+    "        if i == 'E':\n",
+    "            E += 1\n",
+    "\n",
+    "    score = T + R+U+E+L+O+V\n",
+    "\n",
+    "    print(f'Your score is {score}, and you should break up.')\n",
+    "\n",
+    "\n",
+    "love_calc(name1, name2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
