--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -196,14 +196,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to the Love Calculator!\n"
+      "Welcome to the Love Calculator!\n",
+      "What is your name? \n",
+      "Jen\n",
+      "What is their name? \n",
+      "Jen\n",
+      "Your score is 22, and you should break up.\n"
      ]
     }
    ],
@@ -235,10 +240,19 @@
     "            U += 1\n",
     "        if i == 'E':\n",
     "            E += 1\n",
+    "        if i == 'L':\n",
+    "            L += 1\n",
+    "        if i == 'O':\n",
+    "            O += 1\n",
+    "        if i == 'V':\n",
+    "            V += 1\n",
     "\n",
-    "    score = T + R+U+E+L+O+V\n",
+    "    score1 = T + R+U+E\n",
+    "    score2 = L + O + V + E\n",
+    "    \n",
+    "    final = str(score1) + str(score2)\n",
     "\n",
-    "    print(f'Your score is {score}, and you should break up.')\n",
+    "    print(f'Your score is {final}, and you should break up.')\n",
     "\n",
     "\n",
     "love_calc(name1, name2)"
