--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -208,11 +208,12 @@
       "Jen\n",
       "What is their name? \n",
       "Jen\n",
-      "Your score is 22, and you should break up.\n"
+      "Your score is 22.\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "\n",
     "print(\"Welcome to the Love Calculator!\")\n",
     "name1 = input(\"What is your name? \\n\")\n",
@@ -250,12 +251,66 @@
     "    score1 = T + R+U+E\n",
     "    score2 = L + O + V + E\n",
     "    \n",
-    "    final = str(score1) + str(score2)\n",
+    "    temp_final = str(score1) + str(score2)\n",
+    "    final = int(temp_final)\n",
+    "    \n",
+    "    if final < 10 or final > 90:\n",
+    "        print(f'Your score is {final}, you go together like coke and mentos.')\n",
     "\n",
-    "    print(f'Your score is {final}, and you should break up.')\n",
+    "    elif final > 40 and final < 50:\n",
+    "        print(f'Your score is {final}, you are alright together.')\n",
+    "    else:\n",
+    "        print(f'Your score is {final}.')\n",
+    "\n",
     "\n",
     "\n",
     "love_calc(name1, name2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final Project: Treasure Island"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "                  __..-----')\n",
+    "        ,.--._ .-'_..--...-'\n",
+    "       '-\"'. _/_ /  ..--''\"\"'-.\n",
+    "       _.--\"\"...:._:(_ ..:\"::. \\\n",
+    "    .-' ..::--\"\"_(##)#)\"':. \\ \\)    \\ _|_ /\n",
+    "   /_:-:'/  :__(##)##)    ): )   '-./'   '\\.-'\n",
+    "   \"  / |  :' :/\"\"\\///)  /:.'    --(       )--\n",
+    "     / :( :( :(   (#//)  \"       .-'\\.___./'-.\n",
+    "    / :/|\\ :\\_:\\   \\#//\\            /  |  \\\n",
+    "    |:/ | \"\"--':\\   (#//)              '\n",
+    "    \\/  \\ :|  \\ :\\  (#//)\n",
+    "         \\:\\   '.':. \\#//\\\n",
+    "          ':|    \"--'(#///)\n",
+    "                     (#///)\n",
+    "                     (#///)         ___/\"\"\\     \n",
+    "                      \\#///\\           oo##\n",
+    "                      (##///)         `-6 #\n",
+    "                      (##///)          ,'`.\n",
+    "                      (##///)         // `.\\\n",
+    "                      (##///)        ||o   \\\\\n",
+    "                       \\##///\\        \\-+--//\n",
+    "                       (###///)       :_|_(/\n",
+    "                       (sjw////)__...--:: :...__\n",
+    "                       (#/::'''        :: :     \"\"--.._\n",
+    "                  __..-'''           __;: :            \"-._\n",
+    "          __..--\"\"                  `---/ ;                '._\n",
+    " ___..--\"\"                             `-'                    \"-..___\n",
+    "\n",
+    "   (_ \"\"---....___                                     __...--\"\" _)\n",
+    "     \"\"\"--...  ___\"\"\"\"\"-----......._______......----\"\"\"     --\"\"\"\n",
+    "                   \"\"\"\"       ---.....   ___....----"
    ]
   },
   {
