random name generator added

--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -44,11 +44,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Ex 2: Select random name from list of names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create a seed number: 3\n",
+      "Give me everybody's names, separated by a comma. Angela, Ben, Jenny, Michael, Chloe\n",
+      "Ben is going to buy the meal today!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#import relevant library\n",
+    "import random\n",
+    "\n",
+    "#set seed number for reproducibility\n",
+    "test_seed = int(input(\"Create a seed number: \"))\n",
+    "random.seed(test_seed)\n",
+    "\n",
+    "#Take input as list of names and split it into a list\n",
+    "names_string = input(\"Give me everybody's names, separated by a comma. \")\n",
+    "names = names_string.split(\", \")\n",
+    "\n",
+    "#function to select random person\n",
+    "def rand_name(name_list):\n",
+    "    pay_num = random.randrange(len(name_list))\n",
+    "    pay = name_list[pay_num]\n",
+    "    print(f'{pay} is going to buy the meal today!')\n",
+    "\n",
+    "\n",
+    "\n",
+    "rand_name(names)"
+   ]
   }
  ],
  "metadata": {
