--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -87,6 +87,66 @@
     "\n",
     "rand_name(names)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ex 3: Bury treasure on the map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['⬜️', '⬜️', '⬜️']\n",
+      "['⬜️', '⬜️', '⬜️']\n",
+      "['⬜️', '⬜️', '⬜️']\n",
+      "Where do you want to put the treasure? 22\n",
+      "['⬜️', '⬜️', '⬜️']\n",
+      "['⬜️', 'X', '⬜️']\n",
+      "['⬜️', '⬜️', '⬜️']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "row1 = [\"⬜️\",\"⬜️\",\"⬜️\"]\n",
+    "row2 = [\"⬜️\",\"⬜️\",\"⬜️\"]\n",
+    "row3 = [\"⬜️\",\"⬜️\",\"⬜️\"]\n",
+    "map = [row1, row2, row3]\n",
+    "print(f\"{row1}\\n{row2}\\n{row3}\")\n",
+    "position = input(\"Where do you want to put the treasure? \")\n",
+    "\n",
+    "\n",
+    "def bury_treasure(location):\n",
+    "    local = list(location)\n",
+    "    column = int(local[0])\n",
+    "    row = int(local[1])\n",
+    "    \n",
+    "    if row == 1:\n",
+    "        row1[column - 1] = 'X'\n",
+    "    elif row == 2:\n",
+    "        row2[column - 1] = 'X'\n",
+    "    elif row == 3:\n",
+    "        row3[column - 1] = 'X'\n",
+    "\n",
+    "bury_treasure(position)\n",
+    "\n",
+    "print(f\"{row1}\\n{row2}\\n{row3}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final Project: Rock Paper Scissors"
+   ]
   }
  ],
  "metadata": {
