Final project day 4

--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -145,15 +145,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Final Project: Rock Paper Scissors"
+    "## Final Project: Rock Paper Scissors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What do you choose? Type 0 for Rock, 1 for Paper or 2 for Scissors. 0\n",
+      "\n",
+      "    _______\n",
+      "---'   ____)\n",
+      "      (_____)\n",
+      "      (_____)\n",
+      "      (____)\n",
+      "---.__(___)\n",
+      "\n",
+      "Computer chose:\n",
+      "\n",
+      "    _______\n",
+      "---'   ____)____\n",
+      "          ______)\n",
+      "          _______)\n",
+      "         _______)\n",
+      "---.__________)\n",
+      "\n",
+      "You lose\n"
+     ]
+    }
+   ],
+   "source": [
+    "rock = '''\n",
+    "    _______\n",
+    "---'   ____)\n",
+    "      (_____)\n",
+    "      (_____)\n",
+    "      (____)\n",
+    "---.__(___)\n",
+    "'''\n",
+    "\n",
+    "paper = '''\n",
+    "    _______\n",
+    "---'   ____)____\n",
+    "          ______)\n",
+    "          _______)\n",
+    "         _______)\n",
+    "---.__________)\n",
+    "'''\n",
+    "\n",
+    "scissors = '''\n",
+    "    _______\n",
+    "---'   ____)____\n",
+    "          ______)\n",
+    "       __________)\n",
+    "      (____)\n",
+    "---.__(___)\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "RPS = int(input(\"What do you choose? Type 0 for Rock, 1 for Paper or 2 for Scissors. \"))\n",
+    "\n",
+    "comp_numnum = random.randint(0,2)\n",
+    "\n",
+    "if RPS == 0:\n",
+    "    print(rock)\n",
+    "elif RPS == 1:\n",
+    "    print(paper)\n",
+    "elif RPS ==2:\n",
+    "    print(scissors)\n",
+    "    \n",
+    "print(\"Computer chose:\")\n",
+    "\n",
+    "if comp_numnum == 0:\n",
+    "    print(rock)\n",
+    "elif comp_numnum == 1:\n",
+    "    print(paper)\n",
+    "elif comp_numnum ==2:\n",
+    "    print(scissors)\n",
+    "    \n",
+    "    \n",
+    "if comp_numnum == RPS:\n",
+    "    print('You tie')\n",
+    "elif comp_numnum == 0:\n",
+    "    if RPS == 1:\n",
+    "        print('You Win')\n",
+    "    if RPS == 2:\n",
+    "        print('You lose')\n",
+    "    \n",
+    "elif comp_numnum == 1:\n",
+    "    if RPS == 2:\n",
+    "        print('You Win')\n",
+    "    if RPS == 0:\n",
+    "        print('You lose')\n",
+    "        \n",
+    "elif comp_numnum == 2:\n",
+    "    if RPS == 0:\n",
+    "        print('You Win')\n",
+    "    if RPS == 1:\n",
+    "        print('You lose')"
+   ]
   }
  ],
  "metadata": {
