--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -257,6 +257,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Day 5 Project: Password Generator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.pythonforbeginners.com/random/how-to-use-the-random-module-in-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the PyPassword Generator!\n",
+      "How many letters would you like in your password?\n",
+      "3\n",
+      "How many symbols would you like?\n",
+      "2\n",
+      "How many numbers would you like?\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Password Generator Project\n",
+    "import random\n",
+    "letters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z']\n",
+    "numbers = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']\n",
+    "symbols = ['!', '#', '$', '%', '&', '(', ')', '*', '+']\n",
+    "\n",
+    "print(\"Welcome to the PyPassword Generator!\")\n",
+    "nr_letters= int(input(\"How many letters would you like in your password?\\n\")) \n",
+    "nr_symbols = int(input(f\"How many symbols would you like?\\n\"))\n",
+    "nr_numbers = int(input(f\"How many numbers would you like?\\n\"))\n",
+    "\n",
+    "#Eazy Level - Order not randomised:\n",
+    "#e.g. 4 letter, 2 symbol, 2 number = JduE&!91\n",
+    "\n",
+    "\n",
+    "#Hard Level - Order of characters randomised:\n",
+    "#e.g. 4 letter, 2 symbol, 2 number = g^2jk8&P"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
