--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -281,17 +281,19 @@
      "text": [
       "Welcome to the PyPassword Generator!\n",
       "How many letters would you like in your password?\n",
-      "3\n",
+      "12\n",
       "How many symbols would you like?\n",
-      "2\n",
+      "3\n",
       "How many numbers would you like?\n",
-      "1\n"
+      "2\n",
+      "Your password is: owbb)j#sf7l9ccI!a\n"
      ]
     }
    ],
    "source": [
     "#Password Generator Project\n",
     "import random\n",
+    "from random import shuffle\n",
     "letters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z']\n",
     "numbers = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']\n",
     "symbols = ['!', '#', '$', '%', '&', '(', ')', '*', '+']\n",
@@ -306,7 +308,27 @@
     "\n",
     "\n",
     "#Hard Level - Order of characters randomised:\n",
-    "#e.g. 4 letter, 2 symbol, 2 number = g^2jk8&P"
+    "#e.g. 4 letter, 2 symbol, 2 number = g^2jk8&P\n",
+    "list_num = []\n",
+    "list_letters = []\n",
+    "list_symbols = []\n",
+    "\n",
+    "for i in range(nr_letters):\n",
+    "    list_letters.append(random.choice(letters))\n",
+    "for i in range(nr_symbols):\n",
+    "    list_symbols.append(random.choice(symbols))    \n",
+    "for i in range(nr_numbers):\n",
+    "    list_num.append(random.choice(numbers))\n",
+    "    \n",
+    "temp = list_num + list_letters + list_symbols\n",
+    "\n",
+    "temp2 = shuffle(temp)\n",
+    "\n",
+    "password = \"\".join(map(str,temp))\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(f'Your password is: {password}')"
    ]
   },
   {
